@startuml classe_analyse

' Classes
class Utilisateur
class Personnage
class Biographie
class Episode
class Paragraphe
class Univers
class Partie
class Aventure

' Relations
Personnage "1" o-- "1" Biographie
Personnage "1" --> "1" Utilisateur : propriétaire
Personnage "1" --> "1" Utilisateur : MJ
Personnage "1" --> "1" Univers

Biographie "1" o-- "1..*" Episode

Episode "0..*" --> "0..1" Aventure
Episode "1" o-- "1..*" Paragraphe

Partie "1" --> "1" Utilisateur : MJ
Partie "0..*" --> "0..*" Personnage : participants
Partie "1" --> "1" Univers
Partie "0..1" --> "0..1" Aventure : génère >

Aventure "0..*" --> "0..*" Personnage : participants

@enduml
